--- a/config/boards/shields/mk1/mk1.conf
+++ b/config/boards/shields/mk1/mk1.conf
@@ -1,3 +1,7 @@
-
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_MAX_PAIRED=5
+CONFIG_BT_MAX_CONN=5
 CONFIG_ZMK_KEYBOARD_NAME="Keyboard mk1"
