--- a/config/boards/shields/mk1/mk1.conf
+++ b/config/boards/shields/mk1/mk1.conf
@@ -1,7 +1,17 @@
 CONFIG_BT=y
 CONFIG_ZMK_BLE=y
-CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_MAX_PAIRED=5
 CONFIG_BT_MAX_CONN=5
+
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
+
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=30
+
 CONFIG_ZMK_KEYBOARD_NAME="Keyboard mk1"
