--- a/config/boards/shields/mk1/mk1.conf
+++ b/config/boards/shields/mk1/mk1.conf
@@ -14,4 +14,6 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=30
 
+CONFIG_ZMK_DISPLAY=y
+
 CONFIG_ZMK_KEYBOARD_NAME="Keyboard mk1"
