--- a/config/boards/shields/mk1/mk1.conf
+++ b/config/boards/shields/mk1/mk1.conf
@@ -1,5 +1,3 @@
-CONFIG_BT=y
-CONFIG_ZMK_BLE=y
 CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_MAX_PAIRED=5
@@ -15,5 +13,11 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=30
 
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 
 CONFIG_ZMK_KEYBOARD_NAME="Keyboard mk1"
