--- a/config/boards/shields/mk1/mk1.zmk.yml
+++ b/config/boards/shields/mk1/mk1.zmk.yml
@@ -1,12 +1,13 @@
 file_format: "1"
 id: mk1
-name: mk1
+name: MK1
 type: shield
-url: https://github.com/TommieTYX/JellySplit/
+url: https://github.com/Badjau/zmk-config-mk1
 requires: [pro_micro]
 exposes: [i2c_oled]
 features:
   - keys
   - display
 siblings:
-  - mk1
+  - mk1_left
+  - mk1_right
