--- a/config/boards/shields/mk1/mk1_left.conf
+++ b/config/boards/shields/mk1/mk1_left.conf
@@ -1,19 +1,5 @@
 CONFIG_ZMK_KEYBOARD_NAME="Keyboard mk1"
 
-CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_BT_MAX_PAIRED=5
-CONFIG_BT_MAX_CONN=5
-
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
-
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=30
-
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_INVERT=n
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
@@ -24,3 +10,11 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
+
+CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=y 
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
+
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
