right split test

--- a/config/boards/shields/mk1/mk1.dtsi
+++ b/config/boards/shields/mk1/mk1.dtsi
@@ -19,6 +19,16 @@
                                     RC(3,3) RC(3,4) RC(3,5) RC(3,6) RC(3,8) RC(3,7)
         >;
     };
+
+    kscan0: kscan {
+        compatible = "zmk,kscan-gpio-matrix";
+        label = "KSCAN";
+        diode-direction = "col2row";
+
+        // Define placeholders for rows and columns.
+        row-gpios = <>, <>, <>, <>;
+        col-gpios = <>, <>, <>, <>, <>, <>;
+    };
 };
 
 &pro_micro_i2c {
