--- a/config/boards/shields/mk1/mk1_right.conf
+++ b/config/boards/shields/mk1/mk1_right.conf
@@ -8,6 +8,11 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_INVERT=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
 
+
+CONFIG_ZMK_IDLE_TIMEOUT=60000
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=10
+
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
