--- a/build.yaml
+++ b/build.yaml
@@ -20,5 +20,5 @@
 include:
   - board: nice_nano_v2
     shield: mk1_left
-#  - board: nice_nano_v2
-#    shield: mk1_right
+  - board: nice_nano_v2
+    shield: mk1_right
