--- a/config/boards/shields/mk1/mk1_right.conf
+++ b/config/boards/shields/mk1/mk1_right.conf
@@ -1,3 +1,7 @@
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+
 CONFIG_BT=y
 CONFIG_ZMK_BLE=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
