--- a/config/boards/shields/mk1/mk1_right.conf
+++ b/config/boards/shields/mk1/mk1_right.conf
@@ -1,3 +1,4 @@
+#Wakes immediately after sleep. Wiring problem?
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_DISPLAY=y
@@ -6,8 +7,7 @@ CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=10000
-CONFIG_ZMK_PM_SOFT_OFF=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=5000
 
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
