--- a/config/boards/shields/mk1/mk1_left.conf
+++ b/config/boards/shields/mk1/mk1_left.conf
@@ -5,16 +5,17 @@ CONFIG_BT_MAX_CONN=3
 CONFIG_BT_MAX_PAIRED=3
 
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_INVERT=n
-CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y #nice-oled 
+#CONFIG_ZMK_DISPLAY_INVERT=n
+#CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=60000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_PM_SOFT_OFF=y
 
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
+# CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+# CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+# CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+# CONFIG_ZMK_WIDGET_WPM_STATUS=y
