--- a/config/boards/shields/mk1/mk1_left.conf
+++ b/config/boards/shields/mk1/mk1_left.conf
@@ -6,8 +6,8 @@ CONFIG_BT_MAX_PAIRED=3
 
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y #nice-oled 
-#CONFIG_ZMK_DISPLAY_INVERT=n
-#CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
+CONFIG_ZMK_DISPLAY_INVERT=n
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=60000
