--- a/config/boards/shields/mk1/mk1_right.conf
+++ b/config/boards/shields/mk1/mk1_right.conf
@@ -5,6 +5,9 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y #nice-oled
 CONFIG_ZMK_DISPLAY_INVERT=n
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
 #nice-oled config https://github.com/mctechnology17/zmk-nice-oled?tab=readme-ov-file
+CONFIG_NICE_OLED_GEM_ANIMATION=n
+CONFIG_NICE_OLED_POKEMON_ANIMATION=y
+
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=120000
