--- a/config/boards/shields/nice_oled/CMakeLists.txt
+++ b/config/boards/shields/nice_oled/CMakeLists.txt
@@ -17,7 +17,7 @@ if(CONFIG_ZMK_DISPLAY AND CONFIG_NICE_VIEW_WIDGET_STATUS)
     zephyr_library_sources(assets/vip_marcos.c)
     zephyr_library_sources(assets/crystal.c)
     zephyr_library_sources(assets/pokemon.c)
-    zephyr_library_sources(assets/custom_animations.c)
+    zephyr_library_sources(assets/custom_animation.c)
     zephyr_library_sources(widgets/animation.c)
     zephyr_library_sources(widgets/screen_peripheral.c)
   endif()
